force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Approved_By__c.field-meta.xml
<CustomField>
    <fullName>redwing__Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved/Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Learning_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>