force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Approver_Notes__c</fullName>
    <label>Approver Notes</label>
    <type>TextArea</type>
</CustomField>