force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Archived_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Archived_Status__c</fullName>
    <inlineHelpText>If set to None, it means this assignment is not archived.</inlineHelpText>
    <label>Archived Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>