force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Assignment_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>redwing__Assignment_Time_Limit__c</fullName>
    <inlineHelpText>Number of minutes to complete the evaluation</inlineHelpText>
    <label>Assignment Time Limit (mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>