force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__CheckIn_Latitude__c.field-meta.xml
<CustomField>
    <fullName>redwing__CheckIn_Latitude__c</fullName>
    <label>Check-In Latitude</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>