force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Community_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Community_Id__c</fullName>
    <label>Community Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>