force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Evaluation_Result__c.field-meta.xml
<CustomField>
    <fullName>redwing__Evaluation_Result__c</fullName>
    <label>Evaluation Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>