force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Evaluation_Result_Text__c.field-meta.xml
<CustomField>
    <fullName>redwing__Evaluation_Result_Text__c</fullName>
    <formula>TEXT( redwing__Evaluation_Result__c )</formula>
    <label>Evaluation Result Text</label>
    <type>Text</type>
</CustomField>