force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Evaluation_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>redwing__Evaluation_Start_Time__c</fullName>
    <label>Evaluation Start Time</label>
    <type>DateTime</type>
</CustomField>