force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Evaluation_Time_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>redwing__Evaluation_Time_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Time Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>