force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Exempted__c.field-meta.xml
<CustomField>
    <fullName>redwing__Exempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempted</label>
    <type>Checkbox</type>
</CustomField>