force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Is_Activity_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Activity_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates that this assignment belongs to a Learning Activity</description>
    <inlineHelpText>This checkbox indicates that this assignment belongs to a Learning Activity</inlineHelpText>
    <label>Is Activity Assignment</label>
    <type>Checkbox</type>
</CustomField>