force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Is_Test_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Test_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that this assignment is created for preview purposes while creating new Learning objects</description>
    <inlineHelpText>This flag indicates that this assignment is created for preview purposes while creating new Learning objects</inlineHelpText>
    <label>Is Test Assignment</label>
    <type>Checkbox</type>
</CustomField>