force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Last_Published_Learning_Version__c.field-meta.xml
<CustomField>
    <fullName>redwing__Last_Published_Learning_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Published Learning Version</label>
    <referenceTo>redwing__Learning_Version__c</referenceTo>
    <relationshipLabel>Learning Assignments</relationshipLabel>
    <relationshipName>Learning_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>