force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Learning_Version__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Version</label>
    <referenceTo>redwing__Learning_Version__c</referenceTo>
    <relationshipLabel>Learning Assignments (Learning Version)</relationshipLabel>
    <relationshipName>Learning_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>