force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Previous_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>redwing__Previous_Version_Number__c</fullName>
    <label>Previous Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>