force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>redwing__Progress_Percentage__c</fullName>
    <label>Progress %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>