force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Progress_Text__c.field-meta.xml
<CustomField>
    <fullName>redwing__Progress_Text__c</fullName>
    <formula>TEXT(redwing__Progress__c)</formula>
    <label>Progress Text</label>
    <type>Text</type>
</CustomField>