force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Related_Learning_Object__c.field-meta.xml
<CustomField>
    <fullName>redwing__Related_Learning_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Learning Object</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Archived Learning Assignments</relationshipLabel>
    <relationshipName>Archived_Learning_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>