force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status_Date__c</fullName>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>