force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Times_Launched__c.field-meta.xml
<CustomField>
    <fullName>redwing__Times_Launched__c</fullName>
    <inlineHelpText>Times the learning object linked to this assignment has been launched</inlineHelpText>
    <label>Times Launched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>