force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Total_Avg_Task_Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Avg_Task_Rating__c</fullName>
    <formula>redwing__Total_Task_Rating__c / IF( redwing__Total_Votes__c  != 0, redwing__Total_Votes__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Avg Task Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>