force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Total_Task_Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Task_Rating__c</fullName>
    <label>Total Task Rating</label>
    <summarizedField>redwing__Criterion_Rating__c.redwing__Score__c</summarizedField>
    <summaryFilterItems>
        <field>redwing__Criterion_Rating__c.redwing__Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>redwing__Criterion_Rating__c.redwing__Learning_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>