force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Total_Votes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Votes__c</fullName>
    <label>Total Votes</label>
    <summaryFilterItems>
        <field>redwing__Criterion_Rating__c.redwing__Score__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>redwing__Criterion_Rating__c.redwing__Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>redwing__Criterion_Rating__c.redwing__Learning_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>