force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Training_Plan_Section_Item__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan_Section_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan Section Item</label>
    <referenceTo>redwing__Training_Plan_Section_Item__c</referenceTo>
    <relationshipLabel>Learning Assignments</relationshipLabel>
    <relationshipName>Learning_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>