force-app/main/default/objects/redwing__Learning_Assignment__c/fields/redwing__Waitlist_Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Waitlist_Order__c</fullName>
    <label>Waitlist Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>