force-app/main/default/objects/redwing__Learning_Assignment__c/listViews/redwing__Pending_Approval.listView-meta.xml
<ListView>
    <fullName>redwing__Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>redwing__User__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>redwing__Learning__c</columns>
    <columns>redwing__Learning_Version__c</columns>
    <columns>redwing__Progress__c</columns>
    <columns>redwing__Progress_Percentage__c</columns>
    <columns>redwing__Last_Published_Learning_Version__c</columns>
    <columns>redwing__Last_Published_Learning_Version_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>redwing__Progress__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>Pending Approval</label>
</ListView>